test/spec_vectors/load/fail/module_14.wat
(module (memory 1) (func $load_i32 (i32.load (i32.const 0))))